# ai_news

./: .env.example  .gitignore  Procfile  README.md  digest_preview.html  eval_results.json  main.py  pyproject.toml  render.yaml
.claude/: settings.json
.github/workflows/: daily_digest.yml
app/: config.py  runner.py
app/agent/: __init__.py  digest_agent.py  email_agent.py  fact_checker.py  smart_retrieval.py  trace.py
app/api/: main.py
app/api/static/: index.html
app/api/templates/: index.html
app/database/: __init__.py  connection.py  create_tables.py  models.py  repositories.py
app/eval/: ragas_evaluator.py
app/orchestration/: __init__.py  graph.py  nodes.py  state.py
app/scrapers/: __init__.py  anthropic.py  feeds.py  models.py  openai_news.py  rss_scraper.py  youtube.py
app/services/: __init__.py  email_service.py  process_articles.py
docker/: docker-compose.yml
scripts/: seed_test_user.py
tests/: conftest.py  test_config.py  test_runner.py
tests/agent/: test_digest_agent.py  test_email_agent.py  test_smart_retrieval.py
tests/database/: test_connection.py
tests/eval/: test_ragas_evaluator.py
tests/scrapers/: test_rss_scraper.py  test_rss_scraper_integration.py
tests/services/: test_email_service.py  test_process_articles.py
