[project]
name = "ai-news-agg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "markdownify>=0.11.0",
    "openai>=2.38.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "youtube-transcript-api>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
