[project]
name = "ai-news-agg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "feedparser>=6.0.12",
    "markdown>=3.6",
    "markdownify>=0.11.0",
    "openai>=2.38.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "huggingface-hub>=0.23.0",
    "sqlalchemy>=2.0.50",
    "youtube-transcript-api>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0.0",
]
